[package]
name = "omoridev"
version = "0.1.0"
authors = ["Dante <frostu8@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Tools for OMORI modding."

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
log = "0.4"
